Test coverage check

--- a/.github/workflows/incremental-coverage-check.yml
+++ b/.github/workflows/incremental-coverage-check.yml
@@ -12,7 +12,7 @@ jobs:
 
       - uses: utement/c-check@wip
 
-      - name: Lint
+      - name: ls
         run: |
-          pip install flake8
-          flake8 main.py
+          pwd
+          ls -lah
