--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,7 @@ outputs:
 runs:
   using: "composite"
   steps:
+    - uses: actions/checkout@v1
     - run: echo Hello.
       shell: bash
     - run: ls -lah
