Test coverage check

--- a/action.yml
+++ b/action.yml
@@ -11,7 +11,9 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+      with:
+        ref: wip
     - run: echo Hello.
       shell: bash
     - run: ls -lah
