--- a/action.yml
+++ b/action.yml
@@ -5,9 +5,6 @@ inputs:
   coverage_json:
     description: "Coverage json"
     default: ""
-  branch:
-    description: "Branch for PR"
-    default: "${{ github.base_ref }}"
 outputs:
   myOutput:
     description: "Output from the action"
@@ -28,6 +25,6 @@ runs:
       shell: bash
     - run: pip3 install -r icc/requirements.txt
       shell: bash
-    - run: python3 icc/main.py
+    - run: python3 icc/main.py -b $GITHUB_BASE_REF!
       shell: bash
 
