--- a/action.yml
+++ b/action.yml
@@ -25,6 +25,6 @@ runs:
       shell: bash
     - run: pip3 install -r icc/requirements.txt
       shell: bash
-    - run: python3 icc/main.py -w ${{ github.workspace }} -b ${{ github.base_ref }} - ${{ github.workspace }}/test/resources/coverage.json
+    - run: python3 icc/main.py -w ${{ github.workspace }} -b ${{ github.base_ref }} -j ${{ github.workspace }}/test/resources/coverage.json
       shell: bash
 
