Test coverage check

--- a/action.yml
+++ b/action.yml
@@ -23,7 +23,7 @@ runs:
       shell: bash
     - run: ls -lah icc
       shell: bash
-    - run: ls -lah icc/test/resources
+    - run: ls -lah test/resources
       shell: bash
     - run: pip3 install -r icc/requirements.txt
       shell: bash
