--- a/.github/workflows/incremental-coverage-check.yml
+++ b/.github/workflows/incremental-coverage-check.yml
@@ -11,6 +11,8 @@ jobs:
           python-version: "3.7"
       - uses: actions/checkout@v2
       - uses: utement/c-check@wip
+        with:
+          coverage_json: test/resources/coverage.json
       - name: ls
         run: |
           pwd
