--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,9 @@ inputs:
   coverage_json:
     description: "Coverage json"
     required: true
+  logging_level:
+    description: "Loging level"
+    required: INFO
 runs:
   using: "composite"
   steps:
@@ -14,6 +17,6 @@ runs:
         path: icc
     - run: pip3 install -r icc/requirements.txt
       shell: bash
-    - run: python3 icc/main.py -w ${{ github.workspace }} -c ${{ github.head_ref }}  -b ${{ github.base_ref }} -j ${{ github.workspace }}/${{ inputs.coverage_json }}
+    - run: python3 icc/main.py -w ${{ github.workspace }} -c ${{ github.head_ref }}  -b ${{ github.base_ref }} -j ${{ github.workspace }}/${{ inputs.coverage_json }} -l ${{ inputs.logging_level }}
       shell: bash
 
