--- a/.github/workflows/incremental-coverage-check.yml
+++ b/.github/workflows/incremental-coverage-check.yml
@@ -16,6 +16,9 @@ jobs:
         run: |
           pwd
           ls -lah
+      - name: Git branch
+        run: |
+          git branch
       - uses: utement/c-check@wip
         with:
           coverage_json: test/resources/coverage.json
