--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,9 @@ runs:
         path: icc
     - run: pip3 install -r icc/requirements.txt
       shell: bash
-    - run: git fetch origin ${{ github.base_ref }}
+    - run: git fetch origin ${{ github.base_ref }}:${{ github.base_ref }}
+      shell: bash
+    - run: git branch
       shell: bash
     - run: python3 icc/main.py -w ${{ github.workspace }} -c ${{ github.head_ref }}  -b ${{ github.base_ref }} -j ${{ github.workspace }}/${{ inputs.coverage_json }} -l ${{ inputs.logging_level }}
       shell: bash
