--- a/action.yml
+++ b/action.yml
@@ -13,7 +13,7 @@ runs:
   steps:
     - uses: actions/checkout@v3
       with:
-        ref: wip
+        ref: main
         path: icc
     - run: pip3 install -r icc/requirements.txt
       shell: bash
