--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,7 @@ runs:
     - uses: actions/checkout@v3
       with:
         ref: main
+        name: utement/c-check
         path: icc
     - run: pip3 install -r icc/requirements.txt
       shell: bash
