Test coverage check

--- a/.github/workflows/incremental-coverage-check.yml
+++ b/.github/workflows/incremental-coverage-check.yml
@@ -23,4 +23,6 @@ jobs:
         with:
           coverage_json: test/resources/coverage.json
           logging_level: DEBUG
+          branch: ${{ github.base_ref }}
+          current_branch:  ${{ github.head_ref }}
 
